--- a/templates/baseB.html.twig
+++ b/templates/baseB.html.twig
@@ -166,6 +166,8 @@
                                     <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
+                            <!-- Example of integrating dynamic stats in your HTML using Twig -->
+
                             <div class="col-xl-6">
                                 <div class="card mb-4">
                                     <div class="card-header">
@@ -210,11 +212,10 @@
                                             <td>{{ formation.duree }}</td>
                                             <td>
                                                <div class="main-button">
-                                               <a href="{{ path('app_formation_show', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
-                                               <a href="{{ path('app_formation_edit', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">Edit</a>
-                                               <a href="{{ path('app_formation_delete', {'idFormation': formation.idFormation}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this formation?')">Delete</a>
-                                               </div>
-                                             </td>
+                                               <a href="{{ path('app_formationB_show', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
+                                               <a href="{{ path('app_formationB_edit', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">Edit</a>
+                                               <a href="{{ path('app_formationB_delete', {'idFormation': formation.idFormation}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this formation?')">Delete</a></div>
+                                            </td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
