--- a/templates/formationBack/index.html.twig
+++ b/templates/formationBack/index.html.twig
@@ -27,8 +27,8 @@
                     <td>{{ formation.duree }}</td>
                     <td>{{ formation.status }}</td>
                     <td>
-                        <a href="{{ path('app_formation_show', {'idFormation': formation.idFormation}) }}">Show</a>
-                        <a href="{{ path('app_formation_edit', {'idFormation': formation.idFormation}) }}">Edit</a>
+                        <a href="{{ path('app_formationB_show', {'idFormation': formation.idFormation}) }}">Show</a>
+                        <a href="{{ path('app_formationB_edit', {'idFormation': formation.idFormation}) }}">Edit</a>
                     </td>
                 </tr>
             {% endfor %}
