--- a/templates/formationBack/show.html.twig
+++ b/templates/formationBack/show.html.twig
@@ -33,9 +33,9 @@
             </tr>
         </tbody>
     </table>
-    <a href="{{ path('app_formation_index') }}">back to list</a>
+    <a href="{{ path('app_formation_index_back') }}">back to list</a>
 
-    <a href="{{ path('app_formation_edit', {'idFormation': formation.idFormation}) }}">edit</a>
+    <a href="{{ path('app_formationB_edit', {'idFormation': formation.idFormation}) }}">edit</a>
 
     {{ include('formationBack/_delete_form.html.twig') }}
 {% endblock %}
