--- a/templates/formationFront/base.html.twig
+++ b/templates/formationFront/base.html.twig
@@ -80,56 +80,184 @@ https://templatemo.com/tm-586-scholar
         </div>
     </div>
   </header>
-<section class="section courses" id="courses">
+
+  <!-- ***** Header Area End ***** -->
+
+  <div class="main-banner" id="top">
+  </div>
+{% block gestion %}
+<div class="donations section" id="donations">
+ <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="{{asset('assets/images/service-01.png')}}" alt="online degrees">
+            </div>
+            <div class="main-content">
+              <h4>Online Degrees</h4>
+              <p>Whenever you need free templates in HTML CSS, you just remember TemplateMo website.</p>
+              <div class="main-button">
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="{{asset('assets/images/service-02.png')}}" alt="short courses">
+            </div>
+            <div class="main-content">
+              <h4>Short Courses</h4>
+              <p>You can browse free templates based on different tags such as digital marketing, etc.</p>
+              <div class="main-button">
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="{{asset('assets/images/service-03.png')}}" alt="web experts">
+            </div>
+            <div class="main-content">
+              <h4>Web Experts</h4>
+              <p>You can start learning HTML CSS by modifying free templates from our website too.</p>
+              <div class="main-button">
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="section about-us">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="section-heading">
-                    <h6>Latest Courses</h6>
-                    <h2>Latest Courses</h2>
+      <div class="row">
+        <div class="col-lg-6 offset-lg-1">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Where shall we begin?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur <code>adipiscing</code> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  How do we work together?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur <code>adipiscing</code> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Why SCHOLAR is the best?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  There are more than one hundred responsive HTML templates to choose from <strong>Template</strong>Mo website. You can browse by different tags or categories.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Do we get the best support?
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  You can also search on Google with specific keywords such as <code>templatemo business templates, templatemo gallery templates, admin dashboard templatemo, 3-column templatemo, etc.</code>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5 align-self-center">
+          <div class="section-heading">
+            <h6>About Us</h6>
+            <h2>What make us the best academy online?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravid risus commodo.</p>
+            <div class="main-button">
+              <a href="#">Discover More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section class="section courses" id="courses" >
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <div class="section-heading">
+            <h6>Latest Courses</h6>
+            <h2>Latest Courses</h2>
+          </div>
+        </div>
+      </div>
+      <ul class="event_filter">
+        <li>
+          <a class="is_active" href="#!" data-filter="*">Show All</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".design">Webdesign</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".development">Development</a>
+        </li>
+        <li>
+          <a href="#!" data-filter=".wordpress">Wordpress</a>
+        </li>
+      </ul>
+      <div class="row">
+                        {% block content %}
+                    {% for formation in formations %}
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="events_item">
+                                <div class="thumb">
+                                     <a href="#"><img src="{{ asset('PaceLearning/'~ formation.img)}}" alt="" style="width: 150px; height: auto;">></a>
+                                     <span class="category">{{ formation.typeF }}</span>
+                                    <span class="price">
+                                        <h6>
+                                          {{ formation.prix }}<em>TND</em></h6>
+                                    </span>
+                                  </div>
+                                  <div class="down-content">
+                                    <span class="author">Duration</span>
+                                    <h4>{{ formation.duree }}</h4>
+                                   </div>
+                                <div class="main-button">
+                                 <a href="{{ path('app_formation_show', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
+                                </div>
+						                </div>
+                              </div>
+                        </div>
+                    {% endfor %}
+                    {% endblock  %}
                 </div>
             </div>
-        </div>
-        <ul class="event_filter">
-            <li>
-                <a class="is_active" href="#!" data-filter="*">Show All</a>
-            </li>
-            <li>
-                <a href="#!" data-filter=".design">Webdesign</a>
-            </li>
-            <li>
-                <a href="#!" data-filter=".development">Development</a>
-            </li>
-            <li>
-                <a href="#!" data-filter=".wordpress">Wordpress</a>
-            </li>
-        </ul>
-        <div class="row">
-            {% block content %}
-            {% for formation in formations %}
-                <div class="col-12 mb-4">
-                    <div class="events_item">
-                        <div class="thumb">
-                            <a href="#"><img src="{{ asset('PaceLearning/'~ formation.img)}}" alt="" style="width: 150px;"></a>
-                            <span class="category">{{ formation.typeF }}</span>
-                            <span class="price"><h6>{{ formation.prix }}<em>TND</em></h6></span>
-                        </div>
-                        <div class="down-content">
-                            <span class="author">Duration</span>
-                            <h4>{{ formation.duree }}</h4>
-                            <div class="main-button">
-                                <a href="{{ path('app_formation_show', {'idFormation': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-            {% endblock %}
-        </div>
-    </div>
-</section>
 
-
+  </section>
 
   <div class="section fun-facts">
     <div class="container">
@@ -429,6 +557,7 @@ https://templatemo.com/tm-586-scholar
       </div>
     </div>
   </div>
+{% endblock %}
   <footer>
     <div class="container">
       <div class="col-lg-12">
