--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'baseBack.html.twig' %}
 
 
+
+
 {% block body %}
     <main id="main" class="main">
         <div class="container-fluid">
@@ -70,10 +72,12 @@
                                                         <th scope="col">Téléphone</th>
                                                         <th scope="col">Adresse</th>
                                                          <th scope="col">Actions</th>
+                                                         
                                                     
                                                     </tr>
                                                 </thead>
                                                 <tbody>
+                                                
                                                     {% if commande | length == 0 %}
                                                         <tr>
                                                             <td colspan="9" class="text-center">Aucune commande trouvée.</td>
@@ -98,12 +102,14 @@
                                                         {% endfor %}
                                                     {% endif %}
                                                 </tbody>
+                                                
                                             </table>
+                                         
+                                           
+                                            
+                               
                                         </div>
-                                        
-
-                                       
-                                        
+                                         
                                     </div>
                                 </div>
                             </div>
@@ -137,4 +143,7 @@
             </div>
         </div>
     </main>
+
+            {{ knp_pagination_render(commande, 'bootstrap_4_pagination.html.twig') }}
+    
 {% endblock %}
