--- a/templates/front/navbar.html.twig
+++ b/templates/front/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-             <img  src="{{ asset('front/logo/log.png') }}" width="65" height="65"> <h2 style="color: #06BBCC;">9arinyAcademy</h2>
+             <img  src="{{ asset('front/logo/logo.png') }}" width="80" height="80"> <h2 style="color: #06BBCC;">Pace Learning</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
