--- a/templates/front/utilisateur/register.html.twig
+++ b/templates/front/utilisateur/register.html.twig
@@ -1,42 +1,43 @@
 {% extends 'baseFront.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}S'inscrire{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
-    {% if registrationForm.vars.errors|length > 0 %}
-        <div class="alert alert-danger">
-            {% for error in registrationForm.vars.errors %}
-                {{ error.message }}
-            {% endfor %}
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center text-primary px-3">Inscription</h6>
+                <h1 class="mb-5">S'inscrire maintenant</h1>
+            </div>
+            <div class="row g-4">
+                {{ form_start(registrationForm, {'attr': {'novalidate': 'novalidate'}}) }}
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(registrationForm.email, {'label': 'Email', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.password, {'label': 'Mot de passe', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.nom, {'label': 'Nom', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.prenom, {'label': 'Prenom', 'attr': {'class': 'form-control'}}) }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form_row(registrationForm.sexe, {'label': 'Sexe', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.role, {'label': 'Rôle', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.date_nais, {'label': 'Date de naissance', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(registrationForm.num_tel, {'label': 'Numero de téléphone', 'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                {{ form_row(registrationForm.recaptcha) }}
+                {{ form_errors(registrationForm.recaptcha) }}
+                <button class="btn btn-lg btn-primary">{{ button_label|default('S\'inscrire') }}</button>
+                {{ form_end(registrationForm) }}
+                <br>
+                <label for="inputPassword">Vous avez déjà un compte ?</label>
+                <br>
+                <br>
+                <button class="btn btn-lg btn-primary" onclick="window.location.href='{{ path('app_login') }}'">
+                    Se connecter
+                </button>
+                <br>
+            </div>
         </div>
-    {% endif %}
-
-    {# Render the form #}
-    {{ form_start(registrationForm) }}
-    <div class="form-group">
-        {{ form_row(registrationForm.nom, {'label': 'Nom'}) }}
     </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.prenom, {'label': 'Prénom'}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.date_nais, {'label': 'Date de naissance'}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.num_tel, {'label': 'Numéro de téléphone'}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.email, {'label': 'Email'}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.sexe, {'label': 'Sexe'}) }}
-    </div>
-    <div class="form-group">
-        {{ form_row(registrationForm.password, {'label': 'Mot de passe'}) }}
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Register</button>
-    {{ form_end(registrationForm) }}
 {% endblock %}
