--- a/templates/back/utilisateur/age_stat.html.twig
+++ b/templates/back/utilisateur/age_stat.html.twig
@@ -2,6 +2,8 @@
 {% block gestion%}
 
 {% block body %}
+      <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
+
     <h1>Graphique des utilisateurs par âge</h1>
 
     <canvas id="usersByAgeChart" width="400" height="400"></canvas>
