--- a/templates/back/utilisateur/index.html.twig
+++ b/templates/back/utilisateur/index.html.twig
@@ -5,7 +5,8 @@
     {% block body %}
         <h1>Les utilisateurs:</h1>
        
-  
+      <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
+
 
         <table class="table">
             <thead>
