--- a/templates/back/utilisateur/login.html.twig
+++ b/templates/back/utilisateur/login.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
+      <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
+
     <div class="container py-5">
         <div class="text-center mb-5">
             <h6 class="section-title bg-white text-primary px-3">Connexion</h6>
