--- a/templates/back/utilisateur/show.html.twig
+++ b/templates/back/utilisateur/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'baseBack.html.twig' %}
 {% block gestion %}
+      <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
+
 
     <div class="container">
         <h1 class="mt-4">Utilisateur</h1>
