--- a/templates/back/utilisateur/new.html.twig
+++ b/templates/back/utilisateur/new.html.twig
@@ -1,6 +1,8 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block gestion %}
+      <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
