--- a/templates/events/show.html.twig
+++ b/templates/events/show.html.twig
@@ -1,4 +1,5 @@
 {% extends 'baseBack.html.twig' %}
+
 {% block event %}
 {% block title %}Events{% endblock %}
 
@@ -29,6 +30,8 @@
             </tr>
         </tbody>
     </table>
+
+    <img src="{{ qrCodePath }}" alt="QR Code">
 
     <a href="{{ path('app_events_index') }}">back to list</a>
 
