--- a/templates/formationBack/edit.html.twig
+++ b/templates/formationBack/edit.html.twig
@@ -4,10 +4,9 @@
 
 {% block gestion %}
     <h1>Edit Formation</h1>
-
-    {{ include('formationBack/_form.html.twig', {'button_label': 'Update'}) }}
-
+    {{ include('formationBack/_form.html.twig', {'button_label': 'Update', 'button_class': 'btn btn-primary'}) }}
     <a href="{{ path('app_formation_index_back') }}">back to list</a>
-
     {{ include('formationBack/_delete_form.html.twig') }}
+
+
 {% endblock %}
