--- a/templates/formationFront/base.html.twig
+++ b/templates/formationFront/base.html.twig
@@ -317,7 +317,7 @@ body .search-input input::placeholder {
                  <span class="text-muted">{{ formation.prix }} TND</span>
                 <div class="d-flex justify-content-between align-items-center">
                     <a href="{{ path('app_formation_show', {'id': formation.idFormation}) }}" class="btn btn-primary">View Details</a>
-                  <a href="{{ path('formation_generate_quiz', {'id': formation.idFormation}) }}">Take Quiz</a>
+                  <a href="{{ path('handle_quiz', {'idFormation': formation.idFormation}) }}">Take Quiz</a>
 
                 </div>
             </div>
@@ -668,6 +668,7 @@ document.getElementById('searchBox').addEventListener('input', function() {
   <script src="{{asset('assets/js/owl-carousel.js')}}"></script>
   <script src="{{asset('assets/js/counter.js')}}"></script>
   <script src="{{asset('assets/js/custom.js')}}"></script>
+  <script src="{{asset('assets/js/index.js')}}"></script>
 
   </body>
 </html>
