--- a/templates/front/utilisateur/edit_profile.html.twig
+++ b/templates/front/utilisateur/edit_profile.html.twig
@@ -18,7 +18,7 @@
                         {{ form_row(profileForm.prenom, {'label': 'Prenom', 'attr': {'class': 'form-control'}}) }}
                     </div>
                     <div class="col-md-6">
-                        {{ form_row(profileForm.num_tel, {'label': 'Adresse', 'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(profileForm.numTel, {'label': 'Numéro de téléhone', 'attr': {'class': 'form-control'}}) }}
                     </div>
                 </div>
                 <button class="btn btn-lg btn-primary">{{ button_label|default('Enregistrer les modifications') }}</button>
