--- a/templates/front/utilisateur/reset_password.html.twig
+++ b/templates/front/utilisateur/reset_password.html.twig
@@ -9,7 +9,7 @@
                 <div class="card">
                     <div class="card-body">
                         <a href="{{ path('app_index') }}" class="sign__logo">
-                            <img src="{{ asset('front/logo/log.png') }}" alt="Logo">
+                            <img src="{{ asset('front/logo/logo.png') }}" alt="Logo">
                         </a>
 
                         <h5 class="card-title">Réinitialisation du mot de passe</h5>
