--- a/templates/front/navbar.html.twig
+++ b/templates/front/navbar.html.twig
@@ -7,15 +7,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="" class="nav-item nav-link active">Home</a>
-                {% if app.user %}
-                    {% if app.user.roles == "Etudiant" %}
-                        <a href="{{ path('app_myprofile') }}" class="nav-item nav-link">Mon compte</a>
-                    {% endif %}
-                {% endif %}
+<a href="{{ path('app_index') }}" class="nav-item nav-link active">Home</a>
+               {% if app.user %}
+    {% if app.user.role == "Etudiant" %}
+        <a href="{{ path('app_myprofile') }}" class="nav-item nav-link">Mon compte</a>
+    {% elseif app.user.role == "Admin" %}
+        <a href="{{ path('app_utilisateur_index') }}" class="nav-item nav-link">Gérer les utilisateurs</a>
+    {% endif %}
+{% endif %}
+
             </div>
             {% if app.user %}
-                <a href="{{ path('app_logout') }}" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                <a href="{{ path('app_login') }}" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
                     Logout
                     <i class="fa fa-arrow-right ms-3"></i>
                 </a>
