--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -64,6 +64,8 @@
                                     <a class="nav-link" href="{{asset('/utilisateur/new')}}">Ajouter utilisateur</a>
                                     <a class="nav-link" href="{{asset('/utilisateur')}}">Modifier utilisateur</a>
                                     <a class="nav-link" href="{{asset('/utilisateur/age_stat')}}">Statistique par age</a>
+                                    <a class="nav-link" href="{{asset('/utilisateur/user-role-statistics')}}">Statistique par role</a>
+
 
                                 </nav>
                             </div>
