--- a/templates/front/utilisateur/profile.html.twig
+++ b/templates/front/utilisateur/profile.html.twig
@@ -24,7 +24,7 @@
                    
 
                     <p class="mb-4">Email: {{ user.email }}</p>
-                    <p class="mb-4">Address: {{ user.numTel }}</p>
+                    <p class="mb-4">Numéro de téléphone: {{ user.numTel }}</p>
                     <p class="mb-4">Sexe: {{ user.sexe }}</p>
                     
  {% endif %}
