--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -17,7 +17,7 @@
                                 <h1 class="display-3 text-white animated slideInDown">Pace Learning: Plate-forme d'apprentissage en ligne</h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Rejoignez-nous dès maintenant ! </p>
 <a href="#" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft" id="openVideoButton">En savoir plus</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Rejoignez-nous</a>
+<a href="{{ path('app_register') }}" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Rejoignez-nous</a>
                             </div>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                                 <h1 class="display-3 text-white animated slideInDown">Se former en ligne depuis chez soi </h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Rejoignez-nous dès maintenant !</p>
 <a href="https://www.youtube.com/watch?v=0wRCb52GeIg" target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">En savoir plus</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Rejoignez-nous</a>
+<a href="{{ path('app_register') }}" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Rejoignez-nous</a>
 
                             </div>
                         </div>
