--- a/templates/front/utilisateur/profile.html.twig
+++ b/templates/front/utilisateur/profile.html.twig
@@ -8,7 +8,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-80 h-100" src="{{ asset('uploads/images/NoImage.png') }}" alt="Profile Image" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-80 h-100" src="{{ asset('uploads/images/user.png') }}" alt="Profile Image" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
