--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="{{ asset('front/logo/log.png') }}" rel="icon">
+    <link href="{{ asset('front/logo/logo.png') }}" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
