--- a/templates/formationFront/base.html.twig
+++ b/templates/formationFront/base.html.twig
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{asset('vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
+    <meta http-equiv="Content-Security-Policy" content="frame-src 'self' https://www.youtube.com;">
+    
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="{{asset('assets/css/fontawesome.css')}}">
@@ -326,6 +327,20 @@ body .search-input input::placeholder {
     {% endfor %}
 </div>
     </div>
+    <style>
+    .primary-button {
+    background-color:#6f42c1; /* Red shade from your styling */
+    color: #ffffff; /* White text */
+    padding: 8px 16px;
+    border-radius: 5px;
+    border: none;
+    transition: background-color 0.3s;
+    text-decoration: none; /* Removes underline from links */
+}
+</style>
+     <div class="d-flex justify-content-between align-items-center mt-4 mb-4">
+                            <a href="{{ path('app_formation_catalogue') }}" class="btn btn-primary">New Catalogue</a>
+                         </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="#">Previous</a></li>
