--- a/templates/front/utilisateur/login.html.twig
+++ b/templates/front/utilisateur/login.html.twig
@@ -34,10 +34,13 @@
                     <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Se connecter</button>
                 </form>
                 <div class="text-center mt-3">
-    <p>Vous n'avez pas de compte? <a href="{{ path('app_register') }}">S'inscrire maintenant</a></p>
-</div>
+                    <p>Vous n'avez pas de compte? <a href="{{ path('app_register') }}">S'inscrire maintenant</a></p>
+                </div>
             </div>
         </div>
-        
+ <div class="text-center mt-5">
+                    <img src="{{ qrCodeDataUri }}" alt="QR Code">
+                    <p>Scan this QR code for something cool!</p>
+                </div>
     </div>
 {% endblock %}
